# wip

./: .gitignore  bun.lockb  commitlint.config.js  package.json
backend/: .env.example  .gitignore  Cargo.toml
backend/migrations/: 0002_passkey_credentials.sql  001_init.sql  002_passkey.sql
backend/src/: config.rs  error.rs  lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/graphql/: mod.rs  schema.rs
backend/src/graphql/mutations/: auth.rs  mod.rs  passkey.rs  project.rs  task.rs
backend/src/graphql/queries/: me.rs  mod.rs  project.rs  task.rs
backend/src/graphql/types/: mod.rs  project.rs  task.rs  user.rs
backend/src/models/: mod.rs  passkey.rs  project.rs  task.rs  user.rs
backend/src/repositories/: mod.rs  passkey_repository.rs  project_repository.rs  task_repository.rs  user_repository.rs
backend/src/routes/: mod.rs  passkey.rs  webauthn.rs
backend/src/services/: google_auth_service.rs  mod.rs  passkey_service.rs  token_service.rs  webauthn_service.rs
docs/plans/: 2025-01-26-auth-system-impl-phase2.md  2025-01-26-dashboard-layout-impl-phase3.md  2025-01-26-navigation-polish-impl-phase7.md  2025-01-26-project-management-impl-phase4.md  2025-01-26-settings-page-impl-phase5.md  2025-01-26-task-management-impl-phase1.md  2025-01-26-task-management-impl-phase6.md  2025-01-26-task-management-tool-design.md  2026-03-06-passkey-webauthn-design.md  2026-03-06-passkey-webauthn.md
front/: .gitignore  .prettierignore  bun.lockb  package.json  tailwind.config.ts  vitest.config.ts
front/src/app/: layout.tsx  (+1 more)
frontend/: .gitignore  package.json
(+93 files in other folders)
